[package]
name = "tetris"
version = "0.0.1"
authors = ["Fatih Karahan <hseyin97@gmail.com>"]
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2" }
rand = "0.3"

[features]
default = ["sdl2/ttf"]